# From-a-fly-to-an-elephant

./: .gitignore  CMakeLists.txt  README.md
files/: 1.txt  2.txt
src/: CMakeLists.txt  flytoelephant.cpp  flytoelephant.h  main.cpp  world.cpp  world.h
src/heuristicestimator/: iheuristicestimator.cpp  iheuristicestimator.h  myheuristicestimator.cpp  myheuristicestimator.h
test/: CMakeLists.txt  unittest.cpp
